; ModuleID = '/home/carl/AnghaBench/lede/package/boot/uboot-ar71xx/src/cpu/mips/extr_ar71xx_serial.c_serial_getc.c'
source_filename = "/home/carl/AnghaBench/lede/package/boot/uboot-ar71xx/src/cpu/mips/extr_ar71xx_serial.c_serial_getc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OFS_RCV_BUFFER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @serial_getc() #0 {
  br label %1

1:                                                ; preds = %5, %0
  %2 = call i32 (...) @serial_tstc()
  %3 = icmp ne i32 %2, 0
  %4 = xor i1 %3, true
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %1

6:                                                ; preds = %1
  %7 = load i32, i32* @OFS_RCV_BUFFER, align 4
  %8 = call i32 @UART16550_READ(i32 %7)
  ret i32 %8
}

declare dso_local i32 @serial_tstc(...) #1

declare dso_local i32 @UART16550_READ(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
